# rusty-server

./: .gitignore  Cargo.toml  LICENCE  README.md
example/static_page/: Cargo.toml
example/static_page/public/: index.html
example/static_page/src/: main.rs
public/: 404.html  sleep.html
src/: lib.rs
src/server/: buffer.rs  mod.rs  server.rs
src/thread_pool/: mod.rs
