[package]
name = "rusty-server"
version = "0.1.0"
edition = "2021"
licence = "MIT"
licence-file = "LICENCE"
description = "a library to make small webservers"
readme = "README.md"
repository = "https://github.com/Prabesh-Shrestha/rusty-server"
keywords = ["webserver", "multithread"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
